syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "WPF.NETCore";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetAppFileList (google.protobuf.Empty) returns (MessageAppFileList);
  rpc GetMessageList (MessageTextRequest) returns (MessageTextList);
  rpc GetLastLogId (google.protobuf.Empty) returns (MessageLastLogID);
  rpc SendLogs (MessageLogs) returns (google.protobuf.Empty);
  rpc Subscribe (MessageSubscribe) returns (stream MessageSubscribeResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message MessageTextRequest
{
	int32 type = 1;
}

message MessageText{
	int32 id = 1;
	int32 type = 2;
	google.protobuf.Timestamp date = 3;
	string text = 4;
}

message MessageTextList{
	repeated MessageText message_list = 1;
}

message MessageAppFile
{
	string file_path = 1;
	google.protobuf.Timestamp write_time = 2;
}

message MessageAppFileList
{
	repeated MessageAppFile file_list = 1;
}

message MessageSubscribe
{
	int32 id = 1;
}

message MessageSubscribeResponse
{
	string method_name = 1;
	string parameters = 2;
}

message MessageLastLogID
{
	int32 log_info_id = 1;
	int32 log_error_id = 2;
}

message MessageLog
{
	string text = 1;
	google.protobuf.Timestamp date = 3;
}

message MessageLogs
{
	repeated MessageLog log_error_list = 1;
	repeated MessageLog log_info_list = 2;
}
